# bread

./: docker-compose.yaml
back-end/: Dockerfile  Makefile  README.md  outputs.csv  pyproject.toml  requirements.txt  shoi.py  shoishoi.py
back-end/src/: letters.json  main.py
back-end/src/core/: enchant.py
back-end/ui/: index.html  style.css
front-end/src/: index.html  index.js
